--- a/.github/workflows/deploy-multi-pages.yml
+++ b/.github/workflows/deploy-multi-pages.yml
@@ -41,6 +41,10 @@ jobs:
           - name: 05-gif-expert-app
             path: 05-gif-expert-app
             type: vite
+          
+          - name: 06-bvrd-app
+            path: 06-bvrd-app
+            type: vite
 
     steps:
       - uses: actions/checkout@v4
